--- a/rufus.html
+++ b/rufus.html
@@ -64,16 +64,17 @@
             </tr>
             <tr>
                 <td class="question">Quando compi gli anni?</td>
-                <td class="answer">2 Dicembre</td>
-                <div class="countdown-container">
-                    <h1>Countdown al 2 Dicembre</h1>
-                    <div id="countdown">
-                        <div><span id="days"></span>Giorni</div>
-                        <div><span id="hours"></span>Ore</div>
-                        <div><span id="minutes"></span>Minuti</div>
-                        <div><span id="seconds"></span>Secondi</div>
+                <td class="answer">
+                    <div class="countdown-container">
+                        <h1>Countdown al 2 Dicembre</h1>
+                        <div id="countdown">
+                            <div><span id="days"></span>Giorni</div>
+                            <div><span id="hours"></span>Ore</div>
+                            <div><span id="minutes"></span>Minuti</div>
+                            <div><span id="seconds"></span>Secondi</div>
+                        </div>
                     </div>
-                </div>
+                </td>
             </tr>
             <tr>
                 <td class="question">Animale preferito?</td>
