--- a/mc.html
+++ b/mc.html
@@ -22,8 +22,7 @@
     
     
     <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
-        <h1  style="margin-bottom: 10px;">Download Minecraft Texture</h1>
-        <a class="a" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing"> <img class="pfp" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="DOWNLOAD"></a></h3>
+        <a class="a" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing"> <img class="pfp" style="margin-bottom: 30px;" src="Image.Videos/mc/download.png" alt="DOWNLOAD"></a></h3>
     <h3 style="margin-bottom: 30px;">Vi basterà cliccare sull'immagine per accedere al file su Google Drive e iniziare il download in alto a destra!</h3>
     <h3>Funziona su quasi tutte le versioni, anche se potrebbe indicare diversamente</h3>
     <h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
