--- a/rufus.html
+++ b/rufus.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <!-- Sito fatto interamente da Rufus. Enjoy <3 -->
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Black.png">
+    <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/Rufus Black.png">
     <title>About me</title>
     <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
     <meta name="description" content="Approfondimenti sul mitico Rufus">
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-        
         <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
         <h1  style="margin-bottom: 10px;">Approfondimenti su mitico Rufus</h1>
         <h1 style="margin-bottom: 10px;"><p id="AutoType1"></p></h1>
