--- a/404.html
+++ b/404.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Black.png">
     <link rel="stylesheet" href="style.css">
-    <title>404</title>
+    <title>Rufus</title>
     <meta name="title" content="404">
     <meta name="description" content="Page Not Found">
 
 </head>
+
+<style>
+    body {
+        background-color: #000000;
+        color: #e0fbfc;
+    }
+</style>
 
 <body>
 <h1>Pagina sbagliata</h1>
