--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
 
     <h1 style="margin-bottom: 5px;">PROGETTI</h1>
     <h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3>
-    <h6>(che sono io)</h6>
+    <h6 style="margin-bottom: 15px;" >(che sono io)</h6>
 
     <a href="DCvideos/DCSHG.html">
         <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
     </a>
-    
-    <a href="mc.html">
-        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
-    </a>
-    <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
+    <h2 style="margin-bottom: 15px;">DCSHG Streaming ITA</h2>
 
     <a href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
         <img style="margin-bottom: 10px;" class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
     </a>
-    <h2 style="margin-bottom: 50px;">Storia Wattpad Work-In-Progress</h2>
+    <h2 style="margin-bottom: 25px;">Storia Wattpad Work-In-Progress</h2>
+
+    <a href="mc.html">
+        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
+    </a>
+    <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
 
     
     <div id="social-icons" class="social-icons">
