--- a/rufus.html
+++ b/rufus.html
@@ -109,6 +109,11 @@
                 <td class="question">Pokemon preferito?</td>
                 <td class="answer">Mawile <br> <br> <img class="rufusimg" style="margin-bottom: 15px;" src="Image.Videos/Mawile.png" alt="Mawile"> <br> (Al secondo posto Psyduck)  </td> 
             </tr>
+
+            <tr>
+                <td class="question">Cibi preferiti?</td>
+                <td class="answer">1* Kebab <br> 2* Insalata di riso <br> Tramezzini <br> Torta rustica <br> Crostata </td> 
+            </tr>
             
         </table>
 
