--- a/rufus.html
+++ b/rufus.html
@@ -112,7 +112,7 @@
 
             <tr>
                 <td class="question">Cibi preferiti?</td>
-                <td class="answer">1* Kebab <br> 2* Insalata di riso <br> Tramezzini <br> Torta rustica <br> Crostata </td> 
+                <td class="answer">Kebab <br> Insalata di riso <br> Tramezzini <br> Torta rustica <br> Crostata </td> 
             </tr>
             
         </table>
