--- a/rufus.html
+++ b/rufus.html
@@ -21,7 +21,7 @@
         <h1 style="margin-bottom: 10px;"><p id="AutoType1"></p></h1>
         <h3>Questa pagina è fondamentale, poiché potreste incontrare un Rufus in una vasta gamma di forme e dimensioni!</h3>
         <h3>Vi guiderò alla scoperta di questa mistica creatura:</h3>
-        <h3  style="margin-bottom: 5px;">Ecco le mie pfp (foto profilo) più comuni, che cambio in base al periodo.</h3>
+        <h3  style="margin-bottom: 5px;">Ecco le mie pfp più comuni, che cambio in base al periodo.</h3>
         <h6  style="margin-bottom: 15px;">(Discord e' un caso a parte)</h6> <br>
         <div class="image-container">
             <div class="image-wrapper">
