--- a/index.html
+++ b/index.html
@@ -9,83 +9,73 @@
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
-    <style>
-        a {
-            text-align: center;
-        }
-    </style>
-    	<script defer src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
-    <a
-    href="https://discord.com/users/658968248594989058"
-    style="margin-bottom: 45px"
-    >
-    <img
-        class="discord-widget"
-        src="https://discord.c99.nl/widget/theme-4/658968248594989058.png"
-        alt="Discord"
-    />
-    </a>
+    <main id="main-content">
+        <section class="intro">
+            <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px">
+                <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
+            </a>
+            <div class="centered-box hidden">
+                <center><h1>CHI (O COSA) È RUFUS?</h1></center>
+                <p>
+                    Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo e ho sviluppato questo sito web per combattere la noia. Il mio obiettivo principale è condividere i miei progetti e interessi con chiunque sia interessato, oltre a fornire un punto di riferimento per tutti i miei <a href="#social-icons" class="scroll-to-social">social</a>.
+                </p>
+                <p>Se avete domande, non esitate a contattarmi 🤍</p>
+            </div>
+        </section>
 
-    <div class="centered-box hidden">
-        <h1>CHI (O COSA) E' RUFUS?</h1>
-        <p>
-            Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo e ho sviluppato questo sito web per combattere la noia. Il mio obiettivo principale è condividere i miei progetti e interessi con chiunque sia interessato, oltre a fornire un punto di riferimento per tutti i miei 
-            <a href="#social-icons" class="scroll-to-social">social</a>.
-        </p>
-        <p>Se avete domande, non esitate a contattarmi 🤍
-        </p>
-    </div>
+        <section class="projects">
+            <center><h1>PROGETTI</h1></center>
+            <center><h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3></center>
+            <center><h6 style="margin-bottom: 15px;">(che sono io)</h6></center>
+            <div class="project-list">
+                <div class="project">
+                    <a href="DCvideos/DCSHG.html">
+                        <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
+                    </a>
+                    <center><h2>DCSHG Streaming ITA</h2></center>
+                </div>
+                <div class="project">
+                    <a href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
+                        <img class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
+                    </a>
+                    <center><h2>Storia Wattpad Work-In-Progress</h2></center>
+                </div>
+                <div class="project">
+                    <a href="mc.html">
+                        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
+                    </a>
+                    <center><h2>Download Texture di Minecraft</h2></center>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <h1 style="margin-bottom: 5px;">PROGETTI</h1>
-    <h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3>
-    <h6 style="margin-bottom: 15px;" >(che sono io)</h6>
-
-    <a href="DCvideos/DCSHG.html">
-        <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
-    </a>
-    <h2 style="margin-bottom: 15px;">DCSHG Streaming ITA</h2>
-
-    <a href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
-        <img style="margin-bottom: 10px;" class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
-    </a>
-    <h2 style="margin-bottom: 25px;">Storia Wattpad Work-In-Progress</h2>
-
-    <a href="mc.html">
-        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
-    </a>
-    <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
-
-    
-    <div id="social-icons" class="social-icons">
-        <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"> </a>
-        <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Youtube.png" alt="Youtube"></a>          
-        <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Reddit.png" alt="Reddit"></a>
-        <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
-        <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Wattpad.png" alt="Wattpad"></a>
-        <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Deviantart.png" alt="Deviantart"></a>
-        <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Spotify.png" alt="Spotify"></a>
-        <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
-        <a href="https://t.me/ltrufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Telegram.png" alt="Telegram"></a>
-        <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Instagram.png" alt="Instagram"></a>
-        <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Discord.png" alt="Discord"></a>
-        <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Steam.png" alt="Steam"></a>
-        <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus TikTok.png" alt="TikTok"></a>
-        <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Twitter.png" alt="Twitter"></a>
-        <a href="https://github.com/Ru-fus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Github.png" alt="GitHub"></a>
-    </div>
-
-    <h3 style="margin-bottom: 30px; margin-top: 30px;">Di questi uso principalmente Discord e Twitter</h3>
-    		<h3 class="hidden" style="margin-bottom: 30px">
-			Nel dubbio questa è la mia email:
-			<a
-				class="b"
-				href="https://mail.google.com/mail/u/0/#inbox?compose=new"
-				>alessiodeleonardis0212@gmail.com</a
-			>
-		</h3>
+    <footer>
+        <p>Contattami via email: <a href="mailto:alessiodeleonardis0212@gmail.com">alessiodeleonardis0212@gmail.com</a></p>
+        <section id="social-icons" class="social-icons">
+            <div class="social-list">
+                <a href="https://www.pinterest.it/ltrufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"></a>
+                <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Youtube.png" alt="Youtube"></a>
+                <a href="https://www.reddit.com/user/S3Npai-Rufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Reddit.png" alt="Reddit"></a>
+                <a href="https://soundcloud.com/yaufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
+                <a href="https://www.wattpad.com/user/LtRufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Wattpad.png" alt="Wattpad"></a>
+                <a href="https://www.deviantart.com/rufus7734"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Deviantart.png" alt="Deviantart"></a>
+                <a href="https://open.spotify.com/user/rufus_akashi"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Spotify.png" alt="Spotify"></a>
+                <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://t.me/ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Telegram.png" alt="Telegram"></a>
+                <a href="https://www.instagram.com/lt.rufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Instagram.png" alt="Instagram"></a>
+                <a href="https://discord.gg/QygjfvxfZ8"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Discord.png" alt="Discord"></a>
+                <a href="https://steamcommunity.com/id/LtRufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Steam.png" alt="Steam"></a>
+                <a href="https://www.tiktok.com/@ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus TikTok.png" alt="TikTok"></a>
+                <a href="https://twitter.com/lt_rufus_"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Twitter.png" alt="Twitter"></a>
+                <a href="https://github.com/Ru-fus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Github.png" alt="GitHub"></a>
+            </div>
+        </section>
+    </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -94,14 +84,10 @@
 
                 const targetElement = document.getElementById('social-icons');
                 if (targetElement) {
-                    window.scrollTo({
-                        top: targetElement.offsetTop,
-                        behavior: 'smooth'
-                    });
+                    targetElement.scrollIntoView({ behavior: 'smooth' });
                 }
             });
         });
     </script>
 </body>
 </html>
-
