--- a/mc.html
+++ b/mc.html
@@ -3,28 +3,26 @@
 <!-- Sito fatto interamente da Rufus. Enjoy <3 -->
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/mc/mc.png">
-    <title> Minecraft Texture</title>
-    <meta name="title" content="Sito web ufficiale di Rufus ufficiale di Rufus">
-    <meta name="description" content="Dowload della Texture di Minecraft creata dal mitico Rufus">
+    <title>Minecraft Texture</title>
+    <meta name="title" content="Sito web ufficiale di Rufus">
+    <meta name="description" content="Download della Texture di Minecraft creata dal mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        a {
-            text-align: center; 
-        }
-    </style>
-</head>
 
-<body>
-    <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
-        <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
-    </a>
-    
-    <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
-        <a class="a" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing"> <img class="pfp" style="margin-bottom: 30px;" src="Image.Videos/mc/download.png" alt="DOWNLOAD"></a></h3>
-    <h3 style="margin-bottom: 30px;">Vi basterà cliccare sull'immagine per accedere al file su Google Drive e iniziare il download in alto a destra!</h3>
-    <h3>Funziona su quasi tutte le versioni, anche se potrebbe indicare diversamente</h3>
-    <h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
-    <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Si prega di verificare periodicamente per nuovi aggiornamenti. <br> Ultimo aggiornamento: 27/03/2024</h6>
-    
+</head>
+<div class="text-overlay">
+<body id="minecraft-texture-page">
+
+        <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;">
+            <img style="margin-bottom: 10px;" class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
+        </a>
+    <center><h1 style="margin-bottom: 30px;"><a class="b" style="font-size: 27px;" href="index.html">PAGINA PRINCIPALE</a></h1></center>
+    <center><img class="mcb" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="MINECRAFT"> <br></center>
+    <center><a class="mc" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing">
+            <img class="mc" style="margin-bottom: 30px;" src="Image.Videos/mc/download.png" alt="DOWNLOAD"></center>
+        </a>
+    <center><h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
+    <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Si prega di verificare periodicamente per nuovi aggiornamenti.<br>Ultimo aggiornamento: 27/03/2024</h5></center>
+</div>
+</body>
 </html>
