--- a/mc.html
+++ b/mc.html
@@ -19,7 +19,7 @@
     <center><h1 style="margin-bottom: 30px;"><a class="b" style="font-size: 27px;" href="index.html">PAGINA PRINCIPALE</a></h1></center>
     <center><img class="mcb" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="MINECRAFT"> <br></center>
     <center><a class="mc" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing">
-            <img class="mc" style="margin-bottom: 30px;" src="Image.Videos/mc/download.png" alt="DOWNLOAD"></center>
+            <img class="mc" style="margin-bottom: 30px;" src="Image.Videos/mc/Download.png" alt="DOWNLOAD"></center>
         </a>
     <center><h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
     <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Si prega di verificare periodicamente per nuovi aggiornamenti.<br>Ultimo aggiornamento: 27/03/2024</h5></center>
