--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <!-- Sito fatto interamente da Rufus. Enjoy <3 -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,63 +17,98 @@
     <main id="main-content">
         <section class="intro">
             <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px">
-                <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
+                <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png"
+                    alt="Discord">
             </a>
             <div class="centered-box hidden">
-                <center><h1>CHI (O COSA) È RUFUS?</h1></center>
+                <div class="centra">
+                    <h1>CHI È RUFUS?</h1>
+                </div>
                 <p>
-                    Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo e ho sviluppato questo sito web per combattere la noia. Il mio obiettivo principale è condividere i miei progetti e interessi con chiunque sia interessato, oltre a fornire un punto di riferimento per tutti i miei <a href="#social-icons" class="scroll-to-social">social</a>.
+                    Piacere, sono <a class="b" href="rufus.html">Rufus</a>. Ho creato questo sito per condividere i miei progetti e interessi, oltre che per offrire un facile accesso ai miei  <a
+                        href="#social-icons" class="scroll-to-social">social</a>.
                 </p>
-                <p>Se avete domande, non esitate a contattarmi 🤍</p>
             </div>
         </section>
 
         <section class="projects">
-            <center><h1>PROGETTI</h1></center>
-            <center><h3>in questa sezione verranno esposti tutti progetti realizzati dal mitico Rufus</h3></center>
-            <center><h6 style="margin-bottom: 15px;">(che sono io)</h6></center>
+            <div class="centra">
+                <h1>PROGETTI</h1>
+            </div>
+            <div class="centra">
+                <h3>Sezione per i progetti realizzati dal mitico Rufus</h3>
+            </div>
+            <div class="centra">
+                <h6 style="margin-bottom: 15px;">(che sono io)</h6>
+            </div>
             <div class="project-list">
                 <div class="project">
                     <a href="DCvideos/DCSHG.html">
                         <img class="dc" src="Image.Videos/DC.png" alt="DC streaming">
                     </a>
-                    <center><h2>DCSHG Streaming ITA</h2></center>
+                    <div class="centra">
+                        <h2>DCSHG Streaming ITA</h2>
+                    </div>
                 </div>
                 <div class="project">
-                    <a href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
+                    <a
+                        href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
                         <img class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
                     </a>
-                    <center><h2>Storia Wattpad Work-In-Progress</h2></center>
+                    <div class="centra">
+                        <h2>Storia Wattpad Work-In-Progress</h2>
+                    </div>
                 </div>
                 <div class="project">
                     <a href="mc.html">
                         <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
                     </a>
-                    <center><h2>Download Texture di Minecraft</h2></center>
+                    <div class="centra">
+                        <h2>Download Texture di Minecraft</h2>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Contattami via email: <a href="mailto:alessiodeleonardis0212@gmail.com">alessiodeleonardis0212@gmail.com</a></p>
+        <p>Contattami via email: <a href="mailto:alessiodeleonardis0212@gmail.com">alessiodeleonardis0212@gmail.com</a>
+        </p>
         <section id="social-icons" class="social-icons">
             <div class="social-list">
-                <a href="https://www.pinterest.it/ltrufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"></a>
-                <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Youtube.png" alt="Youtube"></a>
-                <a href="https://www.reddit.com/user/S3Npai-Rufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Reddit.png" alt="Reddit"></a>
-                <a href="https://soundcloud.com/yaufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
-                <a href="https://www.wattpad.com/user/LtRufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Wattpad.png" alt="Wattpad"></a>
-                <a href="https://www.deviantart.com/rufus7734"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Deviantart.png" alt="Deviantart"></a>
-                <a href="https://open.spotify.com/user/rufus_akashi"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Spotify.png" alt="Spotify"></a>
-                <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
-                <a href="https://t.me/ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Telegram.png" alt="Telegram"></a>
-                <a href="https://www.instagram.com/lt.rufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Instagram.png" alt="Instagram"></a>
-                <a href="https://discord.gg/QygjfvxfZ8"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Discord.png" alt="Discord"></a>
-                <a href="https://steamcommunity.com/id/LtRufus/"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Steam.png" alt="Steam"></a>
-                <a href="https://www.tiktok.com/@ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus TikTok.png" alt="TikTok"></a>
-                <a href="https://twitter.com/lt_rufus_"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Twitter.png" alt="Twitter"></a>
-                <a href="https://github.com/Ru-fus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Github.png" alt="GitHub"></a>
+                <a href="https://www.pinterest.it/ltrufus/"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"></a>
+                <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Youtube.png" alt="Youtube"></a>
+                <a href="https://www.reddit.com/user/S3Npai-Rufus"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Reddit.png" alt="Reddit"></a>
+                <a href="https://soundcloud.com/yaufus"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
+                <a href="https://www.wattpad.com/user/LtRufus"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Wattpad.png" alt="Wattpad"></a>
+                <a href="https://www.deviantart.com/rufus7734"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Deviantart.png" alt="Deviantart"></a>
+                <a href="https://open.spotify.com/user/rufus_akashi"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Spotify.png" alt="Spotify"></a>
+                <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://t.me/ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Telegram.png"
+                        alt="Telegram"></a>
+                <a href="https://www.instagram.com/lt.rufus/"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Instagram.png" alt="Instagram"></a>
+                <a href="https://discord.gg/QygjfvxfZ8"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Discord.png" alt="Discord"></a>
+                <a href="https://www.tumblr.com/settings/blog/ltrufus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Tumblr.png"
+                    alt="Tumblr"></a>
+                <a href="https://steamcommunity.com/id/LtRufus/"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Steam.png" alt="Steam"></a>
+                <a href="https://www.tiktok.com/@ltrufus"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus TikTok.png" alt="TikTok"></a>
+                <a href="https://twitter.com/lt_rufus_"><img class="logo"
+                        src="Image.Videos/Rufus.Logos/Rufus Twitter.png" alt="Twitter"></a>
+                <a href="https://github.com/Ru-fus"><img class="logo" src="Image.Videos/Rufus.Logos/Rufus Github.png"
+                        alt="GitHub"></a>
+
             </div>
         </section>
     </footer>
@@ -90,4 +126,5 @@
         });
     </script>
 </body>
+
 </html>
