--- a/404.html
+++ b/404.html
@@ -16,6 +16,15 @@
     body {
         background-color: #000000;
         color: #e0fbfc;
+    }  
+    a:hover {
+    color: #ff5e00;
+    }
+    .b2 {
+      color: #2b59af;
+    text-decoration: none;
+    border-radius: 10px;
+  font: normal 20px Cursive;
     }
 </style>
 
