--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 <body>
 <h1>Pagina sbagliata</h1>
 <img src="Image.Videos/DONT.gif" alt="DONT">
-<h1>Prova qui:</h1><h1 style="margin-bottom: 7px;"><a class="b2" href="index.html">PAGINA PRINCIPALE</a></h1>
+<h1>Prova qui:</h1><h1 style="margin-bottom: 7px;"><a class="b2" href="https://ru-fus.github.io/RufusWebsite/index.html">PAGINA PRINCIPALE</a></h1>
 
 </body>
 </html>
