--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
                     </a>
                     <div class="centra">
-                        <h2>Storia Wattpad Work-In-Progress</h2>
+                        <h2>Storia Wattpad</h2>
                     </div>
                 </div>
                 <div class="project">
