--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
+    <meta property=’og:image’ content='https://rimupon.neocities.org/rimu.png'>
     <script defer src="script.js"></script>
 </head>
 
@@ -21,6 +22,8 @@
                     alt="Discord">
             </a>
             <div class="centered-box hidden">
+                <div class="green-header d-flex justify-content-between"> 
+                
                 <div class="centra">
                     <h1>CHI È RUFUS?</h1>
                 </div>
@@ -67,7 +70,15 @@
                         <h2>Download Texture di Minecraft</h2>
                     </div>
                 </div>
-            </div>
+                    <div class="project">
+                        <a href="lcs.html">
+                            <img class="dc" src="Image.Videos/lcs.png" alt="LoL Custom Skin">
+                        </a>
+                        <div class="centra">
+                            <h2>Download  skin custom di League of Legends</h2>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
 
