--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
-    <meta property=’og:image’ content='https://rimupon.neocities.org/rimu.png'>
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/editor/white2020-sp-new-logo.png?1733324385" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/white2020-sp-new-logo.png?1711562660" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/2brands-sp-work-clients.png?1736188792" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/gfk-m20bmaagkzj.jpg" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/cddddd-merch.png?1711555450" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/cdd-o.png?1711555481" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/asset-2-2x.png?1711615735" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/asset-1.png?1711620311" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/editor/splogo-text.png?1679825332" />
+    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/1kres-sp-new-logo.png?1721760980" />
     <script defer src="script.js"></script>
 </head>
 
