--- a/index.html
+++ b/index.html
@@ -10,27 +10,19 @@
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/editor/white2020-sp-new-logo.png?1733324385" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/white2020-sp-new-logo.png?1711562660" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/2brands-sp-work-clients.png?1736188792" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/gfk-m20bmaagkzj.jpg" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/cddddd-merch.png?1711555450" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/cdd-o.png?1711555481" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/asset-2-2x.png?1711615735" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/asset-1.png?1711620311" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/editor/splogo-text.png?1679825332" />
-    <meta property="og:image" content="https://www.stellarparadigm.com/uploads/8/1/9/6/81968762/published/1kres-sp-new-logo.png?1721760980" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Ru-fus/RufusWebsite/main/Image.Videos/Rufus%20Black.png" />
+
     <script defer src="script.js"></script>
 </head>
 
 <body>
     <main id="main-content">
         <section class="intro">
-            <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 45px">
+            <a href="https://discord.com/users/658968248594989058">
                 <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png"
                     alt="Discord">
             </a>
-            <div class="centered-box hidden">
+            <div class="centered-box hidden" style="margin-top: 45px;">
                 <div class="green-header d-flex justify-content-between"> 
                 
                 <div class="centra">
