--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
     <meta name="description" content="Pagina Principale">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Ru-fus/RufusWebsite/main/Image.Videos/Rufus%20Black.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Ru-fus/RufusWebsite/main/Image.Videos/Rufus%20Black.png">
+    <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
 
     <script defer src="script.js"></script>
 </head>
