--- a/mc.html
+++ b/mc.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Download della Texture di Minecraft creata dal mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="    https://raw.githubusercontent.com/Ru-fus/RufusWebsite/refs/heads/main/Image.Videos/mc/mc.png">
+    <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
     <style>
         body {
             margin-top: 18px;
