--- a/rufus.html
+++ b/rufus.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Approfondimenti sul mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Ru-fus/RufusWebsite/main/Image.Videos/Rufus%20Black.png">
+    <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
     <style>
         a {
             text-align: center; 
@@ -24,6 +27,10 @@
         <h3  style="margin-bottom: 5px;">Ecco le mie pfp più comuni, che cambio in base al periodo.</h3>
         <h6  style="margin-bottom: 15px;">(Discord e' un caso a parte)</h6> <br>
         <div class="image-container">
+            <div class="image-wrapper">
+                <img class="pfp" src="Image.Videos/Krieg.png" alt="Krieg Girl">
+                <span class="description">Korps of Krieg Girl Fanart - Warhammer 40K</span>
+            </div>
             <div class="image-wrapper">
                 <img class="pfp" src="Image.Videos/Nebula.png" alt="Nebula">
                 <span class="description">Nebula - Atlas and the Stars</span>
