--- a/lcs.html
+++ b/lcs.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Download delle skin custom di League of Legends creata dal mitico Rufus">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="    https://raw.githubusercontent.com/Ru-fus/RufusWebsite/refs/heads/main/Image.Videos/LCS.png">
+    <meta property="og:image:width" content="630">
+    <meta property="og:image:height" content="630">
 </head>
 <body id="lol-custom-skins-page">
 <div class="text-overlay">
