--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                     <div class="project">
                         <a href="lcs.html">
-                            <img class="dc" src="Image.Videos/lcs.png" alt="LoL Custom Skin">
+                            <img class="dc" src="Image.Videos/LCS.png" alt="LoL Custom Skin">
                         </a>
                         <div class="centra">
                             <h2>Download  skin custom di League of Legends</h2>
