--- a/lcs.html
+++ b/lcs.html
@@ -119,7 +119,7 @@
         <p class="a" style="margin-bottom: 20px;">  <i>Local Disk > Riot Games > League of Legends > Game > League of Legends</i></p> <br>
 
         <img style="margin-bottom: 20px;" class="lcs" src="Image.Videos/LCS/lcsprofile.png" alt="">
-        <p style="margin-bottom: 50px;">Trascina le cartelle delle skin nel programma, abilita la spunta e premi il tasto Play.</p>
+        <p style="margin-bottom: 50px;">Estrai e trascina le cartelle delle skin nel programma, abilita la spunta e premi il tasto Play.</p>
         
     <center><h1 class="c" >Noti importanti: </h1> </center>
     <center><p>Solo tu vedrai le skin. <br>
@@ -141,7 +141,7 @@
                 </a>
             </div>
             <div class="download-wrapper">
-                <a href="https://drive.google.com/file/d/1T3vc4EWm3iP-Rt3d2mXpI9psm053FEhD/view?usp=sharing" download>
+                <a href="https://drive.google.com/file/d/1XlVRxEcIMKXJRlYVJW6MMf9K_tSb8Tum/view?usp=sharing" download>
                     <div class="download-btn">
                         <img class="front" src="Image.Videos/LCS/Draven.png" alt="Download Draven skin">
                         <img class="back" src="Image.Videos/LCS/Draven2.png" alt="Download Draven2 skin">
