--- a/rufus.html
+++ b/rufus.html
@@ -80,12 +80,8 @@
                 </td>
             </tr>
             <tr>
-                <td class="question">Animale preferito?</td>
-                <td class="answer">Tartaruga</td>
-            </tr>
-            <tr>
                 <td class="question">Razza di cane preferita?</td>
-                <td class="answer">Komondor:<br> <br>
+                <td class="answer">Komondor (e anche Bovaro delle Fiandre):<br> <br>
                     <img class="rufusimg" style="margin-bottom: 15px;" src="Image.Videos/Komondor.png" alt="Doggo"></td>
             </tr>
             <tr>
