--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <main id="main-content">
         <section class="intro">
             <a href="https://discord.com/users/658968248594989058">
@@ -25,13 +26,13 @@
                     alt="Discord">
             </a>
             <div class="centered-box hidden" style="margin-top: 35px;">
-                <div class="green-header d-flex justify-content-between"> 
+                <div class="centered-content">
                 
                 <div class="centra">
-                    <h1>CHI È RUFUS?</h1>
+                    <h1>CHI È RUFUSSSSSS?</h1>
                 </div>
                 <p>
-                    Piacere, sono <a class="b" href="rufus.html">Rufus</a>. Ho creato questo sito per condividere i miei progetti e interessi, oltre che per offrire un facile accesso ai miei  <a
+                    Piacere, sono Rufus. Ho creato questo sito per condividere i miei progetti e interessi, oltre che per offrire un facile accesso ai miei  <a
                         href="#social-icons" class="scroll-to-social">social</a>.
                 </p>
             </div>
@@ -56,7 +57,6 @@
                         <h2>DCSHG Streaming ITA</h2>
                     </div>
                 </div>
-
 
                     <div class="project">
                         <a href="lcs.html">
@@ -84,7 +84,6 @@
                             <h2>Storia Wattpad</h2>
                         </div>
                     </div>
-            </div>    
         </section>
     </main>
 
