--- a/mc.html
+++ b/mc.html
@@ -92,13 +92,13 @@
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;">
             <img style="margin-bottom: 10px;" class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
         </a>
-    <center><h1 style="margin-bottom: 30px;"><a class="b" style="font-size: 27px;" href="index.html">PAGINA PRINCIPALE</a></h1></center>
-    <center><img class="mcb" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="MINECRAFT"> <br></center>
-    <center><a class="mc" href="https://drive.google.com/file/d/1YIhyCumGPQ57X0Ggs2R9Z9L1RnCW_7wz/view?usp=sharing">
-            <img class="mc" style="margin-bottom: 30px;" src="Image.Videos/mc/Download.png" alt="DOWNLOAD"></center>
+    <h1 style="margin-bottom: 30px;"><a class="b" style="font-size: 27px;" href="index.html">PAGINA PRINCIPALE</a></h1>
+    <img class="mcb" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="MINECRAFT"> <br>
+    <a class="mc" href="https://drive.google.com/file/d/1mQjM-jtWo4-hgMb9L-9QefJrO-5UVVnK/view?usp=sharing">
+            <img class="mc" style="margin-bottom: 30px;" src="Image.Videos/mc/Download.png" alt="DOWNLOAD">
         </a>
-    <center><h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
-    <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Per avere aggiornamenti in tempo reale si consiglia di entrare nel server Discord.<br>Ultimo aggiornamento: 29/04/2025</h5></center>
+    <h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
+    <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Per avere aggiornamenti in tempo reale si consiglia di entrare nel server Discord.<br>Ultimo aggiornamento: 11/03/2025</h5></center>
 </div>
 </body>
 </html>
