--- a/lcs.html
+++ b/lcs.html
@@ -94,6 +94,20 @@
                 <img class="lcs" src="Image.Videos/LCS.png" alt="LoL Custom Skins">
             </div>
 
+
+
+
+
+            <div class="centra" style="margin-top: 30px;">
+                <h1 class="c">CON LA NUOVA SEASON NON FUNZIONA:</h1>
+            </div>
+
+
+
+
+
+
+
             <div class="centra" style="margin-top: 20px;">
                 <h2 style="margin-bottom: 33px;">Guida per installare LoL Custom Skins</h2>
             </div>
@@ -160,7 +174,42 @@
                     </a>
                 </div>
             </div>
-        </section>
+
+
+            <div class="centra" style="margin-top: 50px;">
+                <h1>Altra piccola sezione per il download di "script"</h1>
+            </div>
+            
+
+
+            
+        <div class="project-list">
+
+             <div class="project-list">
+                <div class="project">
+                    <a href="LCS.Download/spamping.py" download>
+                        <img class="dc" src="LCS.Download/ping.png" alt="?" style="margin-top: 20px;">
+                    </a>
+                    <div class="centra">
+                        <h3>spamping di ? in /all</h3>
+                    </div>
+                </div>
+                <div class="project">
+                    <a href="LCS.Download/allchatautotype.py" download>
+                        <img class="dc" src="LCS.Download/bait.png" alt="ez" style="margin-top: 20px;">
+                    </a>
+                    <div class="centra">
+                        <h3>spamping di insulti non bannabili in /all</h3>
+                    </div>
+                </div>
+        </div>
+
+                <div class="centra"></div>
+            <h4>basta avviare i file e premere il tasto UP (freccia in su) quando si vuole spammare </h4>
+        </div>
+
+
+
     </main>
 </body>
 </html>
